<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Manage GearCM</string>

    <string name="gearcm_settings_title">GearCM kernel settings</string>
    <string name="gearcm_settings_summary">With this app, you can change the settings for the GearCM kernel. Use at your own risk\n\nIf you run another kernel, these settings may be nonfunctional or cause force closes.</string>

    <string name="category_screen_title">Screen</string>
    <string name="mdnie_title_head">mDNIe Mode</string>
    <string name="mdnie_summary_head">Adjust mDNIe display post-processing</string>

    <string name="button_reset_title">Reset</string>

    <!-- Used for activity title. Usually not visible, except on the
         multi-task screen -->
    <string name="generic_warning_title">Warning</string>

    <!-- Invalid IMEI -->
    <string name="imei_not_sane_title">Warning!</string>
    <string name="imei_not_sane_message">A problem was detected with your device. Your device IMEI number is invalid. An invalid IMEI number could cause network issues including the inability to call emergency numbers.</string>
    <string name="imei_not_sane_ok">OK</string>

    <string name="category_apply_settings">Apply Settings after boot</string>
    <string name="apply_title">Apply Setting</string>
    <string name="apply_summary_on">Settings get applied</string>
    <string name="apply_summary_off">Settings dont get applied</string>

</resources>
