<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
                android:title="@string/gearcm_settings_title"
                android:key="category_gearcm">
                <PreferenceScreen
                android:key="processor_settings"
                android:title="@string/gearcm_settings_title"
                android:summary="@string/gearcm_settings_summary">
                </PreferenceScreen>
	</PreferenceCategory>

	<PreferenceCategory
    	android:title="@string/category_screen_title">
	    <!-- mDNIe Options -->
	    <ListPreference
	        android:key="mdnie"
	        android:title="@string/mdnie_title_head"
	        android:summary="@string/mdnie_summary_head"
	        android:entries="@array/mdnie_entries"
	        android:entryValues="@array/mdnie_entries_values"
	        android:defaultValue="6" />
	</PreferenceCategory>

        <PreferenceCategory
            android:title="@string/category_apply_settings"
            android:key="category_apply">
            <CheckBoxPreference
                android:key="apply"
                android:title="@string/apply_title"
                android:summaryOn="@string/apply_summary_on"
                android:summaryOff="@string/apply_summary_off"
                android:persistent="true" />
        </PreferenceCategory>

</PreferenceScreen>
